--- a/05. vu/Tiki-Clone/tiki-clone/package.json
+++ b/05. vu/Tiki-Clone/tiki-clone/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.2",
     "@types/node": "18.11.18",
@@ -30,6 +31,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
