--- a/05. vu/Tiki-Clone/tiki-clone/package.json
+++ b/05. vu/Tiki-Clone/tiki-clone/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "path": "^0.12.7",
     "react": "18.2.0",
