--- a/05. vu/Tiki-Clone/tiki-clone/package.json
+++ b/05. vu/Tiki-Clone/tiki-clone/package.json
@@ -15,16 +15,19 @@
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.2",
+    "@szhsin/react-menu": "^3.4.1",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "html-react-parser": "^3.0.8",
+    "interweave": "^13.0.0",
     "next": "13.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
@@ -32,12 +35,15 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-show-more-button": "^1.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-slick": "^0.23.10",
     "sass": "^1.57.1"
   }
 }
