--- a/05. vu/Tiki-Clone/tiki-clone/tsconfig.json
+++ b/05. vu/Tiki-Clone/tiki-clone/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/reactContext/reactContext.js"],
   "exclude": ["node_modules"]
 }
