--- a/05. vu/Tiki-Clone/tiki-clone/package.json
+++ b/05. vu/Tiki-Clone/tiki-clone/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-infinite-scroll-component": "^6.1.0",
     "react-show-more-button": "^1.0.0",
     "react-slick": "^0.29.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-image-gallery": "^1.2.0",
     "@types/react-slick": "^0.23.10",
     "sass": "^1.57.1"
   }
